examples/test/testpolicy18447.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18447
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key38: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value37
      podSelector:
        matchLabels:
          key6: value20
          key48: value0
          key20: value18
